kubernetes/apps/base/firefly/firefly/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
spec:
  replicas: 1
  strategy: {type: Recreate}
  selector:
    matchLabels: {app.kubernetes.io/name: firefly}
  template:
    metadata:
      labels: {app.kubernetes.io/name: firefly}
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:version-6.6.6@sha256:ae69fdd95cdef9038cd7a460a5aec731f14813973e4f096511d5a4ea9ff0e972
          ports: [{name: http, containerPort: 8080}]
          volumeMounts: [{name: uploads, mountPath: /var/www/html/storage/upload}]
          readinessProbe: {httpGet: {path: /api/v1/about, port: http}, initialDelaySeconds: 30, periodSeconds: 10}
          livenessProbe: {httpGet: {path: /api/v1/about, port: http}, initialDelaySeconds: 60, periodSeconds: 20}
      volumes:
        - name: uploads
          persistentVolumeClaim: {claimName: firefly-upload}
