kubernetes/apps/base/firefly/firefly/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  selector:
    app.kubernetes.io/name: firefly
  ports:
    - name: http
      port: 8080
      targetPort: http
